<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF0F6"
    android:padding="35dp">


    <LinearLayout
        android:id="@+id/headerGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/expenseEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_entry_form"
            android:textSize="35sp"
            android:textColor="#880E4F"/>

        <ImageView
            android:id="@+id/expenceImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/track_expence"
            android:layout_marginTop="30dp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/nameGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/headerGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/expenseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_name"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/editExpenseName"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:hint="@string/ex_name"
            android:textSize="20sp"
            android:textColorHint="@color/hintText"
            android:layout_marginStart="10dp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/amountGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/nameGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/amountTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/editAmount"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:autofillHints="edit"
            android:hint="@string/ex_amount"
            android:textSize="20sp"
            android:textColorHint="@color/hintText"
            android:layout_marginStart="10dp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/categoryGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/amountGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/categoryTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/editCategory"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:autofillHints="category"
            android:hint="@string/ex_category"
            android:textSize="20sp"
            android:textColorHint="@color/hintText"
            android:layout_marginStart="10dp"/>
    </LinearLayout>


    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:backgroundTint="#F48FB1"
        android:text="@string/save_expense"
        android:textColor="@color/black"
        app:cornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryGroup"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>