<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/screenBackground"
    android:padding="@dimen/padding_large">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/welcome_to_expense_tracker_app"
        android:textColor="@color/text_primary_dark"
        android:textSize="@dimen/text_xlarge"
        app:layout_constraintBottom_toTopOf="@id/btnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:icon="@android:drawable/ic_menu_edit"
        android:iconTint="@color/white"
        android:text="@string/add_new_expense"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_xlarge"
        app:backgroundTint="@color/button_pink"
        app:cornerRadius="@dimen/corner_radius_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:icon="@android:drawable/ic_menu_share"
        android:iconTint="@color/white"
        android:text="@string/share"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_xlarge"
        app:backgroundTint="@color/button_violet"
        app:cornerRadius="@dimen/corner_radius_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAdd" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/expensesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnShare" />

    <TextView
        android:id="@+id/emptyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_expenses_found"
        android:textColor="@color/text_primary_dark"
        android:textSize="@dimen/text_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnShare" />


</androidx.constraintlayout.widget.ConstraintLayout>
